<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/image_background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.swpuiot.qq2018.Log_In">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/qq_logo"
            android:layout_width="36dp"
            android:layout_marginLeft="10dp"
            android:layout_height="36dp"
            android:layout_gravity="left|center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/image_qq_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#0084ff"
            android:textSize="22sp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:text="QQ2018"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <!--<FrameLayout-->
    <!--android:id="@+id/layout_logoin"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<Button-->
    <!--android:id="@+id/btn_login"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->
    <!--android:layout_gravity="left"-->
    <!--android:text="@string/login_text"-->
    <!--android:background="@drawable/image_background"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:textColor="#ffffff"-->
    <!--android:layout_alignParentStart="true" />-->

    <!--<ImageView-->
    <!--android:scaleType="fitStart"-->
    <!--android:id="@+id/qq_logo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="50dp"-->
    <!--android:src="@drawable/image_qq_logo"-->
    <!--android:layout_gravity="left|center_vertical" />-->

    <!--</FrameLayout>-->
    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/username_text" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_username"
        android:layout_marginTop="20dp"
        android:hint="@string/password_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:layout_below="@+id/text_password"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/editshape"
            android:text="@string/login_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/build"
            android:layout_width="135dp"
            android:layout_height="40dp"
            android:layout_below="@+id/text_password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/login"
            android:background="@drawable/editshape"
            android:text="@string/btn_build_text"
            android:textColor="#ffffff" />
    </LinearLayout>


</LinearLayout>
